RESOLVED FIXED84476
JSGarbageCollect should not call collectAllGarbage()
https://bugs.webkit.org/show_bug.cgi?id=84476
Summary JSGarbageCollect should not call collectAllGarbage()
Mark Hahnenberg
Reported 2012-04-20 12:09:18 PDT
JSGarbageCollect should not synchronously call collectAllGarbage(). Instead, it should notify the GCActivityCallback that it has abandoned an object graph, which will set the timer to run at some point in the future that JSC can decide according to its own policies.
Attachments
Patch (1.30 KB, patch)
2012-04-20 12:11 PDT, Mark Hahnenberg
ggaren: review+
Mark Hahnenberg
Comment 1 2012-04-20 12:11:25 PDT
Geoffrey Garen
Comment 2 2012-04-20 12:17:14 PDT
Comment on attachment 138139 [details] Patch Let's fix the FIXME by taking advantage of our new callback, like so: - Cancel the GC timer at the start of collection (rename didCollect to willCollect) - If collection causes a didAbandonObjectGraph, it can now start the timer, which will, in fact, cause another collection later. In the same patch, you can remove the isBusy() check, since didAbandonObjectGraph is safe to call while the heap is busy.
Mark Hahnenberg
Comment 3 2012-04-20 12:36:28 PDT
Note You need to log in before you can comment on or make changes to this bug.