JSGarbageCollect should not call collectAllGarbage() https://bugs.webkit.org/show_bug.cgi?id=84476

Reviewed by Geoffrey Garen.

* API/JSBase.cpp:
(JSGarbageCollect): Notify the Heap's GCActivityCallback using didAbandonObjectGraph.


Canonical link: https://commits.webkit.org/101963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114771 268f45cc-cd09-0410-ab3c-d52691b4dbfc